# reer_mlx

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_USAGE_GUIDE.md  COMPLETE_SYSTEM_DEMO.py  DSPy_IMPLEMENTATION_SUMMARY.md  GEPA_RUNNING_IN_CORE_LOOP.md  INTEGRATION_SUMMARY.md  MEMORY_PROFILING_SUMMARY.md  Makefile  PERFORMANCE_REPORT.md  PLUGIN_IMPLEMENTATION_SUMMARY.md  README.md  SETUP_COMPLETE.md  TWSCRAPE_SETUP.md  VALIDATION_REPORT.md  WORKING_SYSTEM.md  analyze_real_data.py  demo.py  demo_e2e_collection.py  demo_gepa_mlx_complete.py  demo_reer_content_generation.py  demo_reer_system.py  demo_twitter_reer.py  example_pipeline_config.json  fix_utc.py  generate_ai_agent_content.py  pyproject.toml  pytest.ini  reer_demo_results.json  requirements-dev.txt  requirements-social.txt  requirements.txt  run_gepa_core_loop.py  run_social_demo.py  setup_twscrape.py  simple_gepa_demo.py  (+10 more)
.claude/hooks/logs/: chat.json  post_tool_use.json  pre_tool_use.json  stop.json  sub_agent_stop.json
config/: logging_config.py  memory_config.py  reer_config.py
core/: __init__.py  candidate_scorer.py  exceptions.py  integration.py  trace_store.py  trainer.py  trajectory_synthesizer.py
docs/: ARCHITECTURE.md  memory_profiling.md
dspy_program/: __init__.py  evaluator.py  example_usage.py  gepa_runner.py  mlx_server_config.py  mlx_variants.py  pipeline.py  reasoning_composer.py  reer_gepa_integration.py  reer_module.py
dspy_program/.claude/hooks/logs/: post_tool_use.json  pre_tool_use.json
examples/: memory_profiling_example.py  qa.json  qa.jsonl
plugins/: __init__.py  dspy_lm.py  dspy_pipeline.py  example_usage.py  heuristics.py  lm_registry.py  mlx_lm.py
policies/: default.json  default.yml
reer/: trajectory_search.py
scripts/: cli_common.py  cli_mlx.py  collect_twitter.py  collect_x_tweets.py  integrated_demo.py  reer_benchmark.py  reer_synthesize.py  social_collect.py  social_eval.py  social_gepa.py  social_reer.py  social_run.py
social/: README.md  __init__.py  dspy_modules.py  example_usage.py  kpis.py
social/collectors/: __init__.py  twscrape_collector.py  x_normalize.py
social/templates/: policies.md
specs/001-reer_mlx/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-reer_mlx/contracts/: artifact.schema.json  candidate.schema.json  reer_trajectory.schema.json  timeline.schema.json  traces.schema.json
test_data/: invalid_trace.json  sample_traces.jsonl  valid_trace.json  validation_report.json
test_data/fixed/: invalid_trace.json
tests/: __init__.py  conftest.py  test_memory_profiler.py  test_sliding_window.py  test_together_validation.py
tests/contract/: README.md  __init__.py  test_candidate_schema.py  test_schema_validator_integration.py  test_timeline_schema.py  test_trace_schema.py
tests/integration/: __init__.py  test_data_collection.py  test_dspy_gepa_runner.py  test_gepa_tuning.py  test_pipeline.py  test_provider_switching.py  test_reer_mining.py
tests/unit/: test_candidate_scorer.py  test_example.py  test_lm_registry.py  test_social_gepa_evaluate.py  test_trace_store.py
tools/: README.md  example_usage.py  memory_profiler.py  policy.py  ppl_eval.py  provenance.py  schema_check.py
